[gd_scene load_steps=12 format=3 uid="uid://d037gatmmoeyp"]

[ext_resource type="Texture2D" uid="uid://nn1omok54og3" path="res://gui/score.png" id="1_bd8dt"]
[ext_resource type="Script" path="res://gui/gui.gd" id="1_xl70e"]
[ext_resource type="FontFile" uid="uid://bffvy5h8il4s8" path="res://gui/at01.ttf" id="2_0d3iy"]
[ext_resource type="Texture2D" uid="uid://rf8t6jnsam7k" path="res://gui/time.png" id="3_gso6j"]
[ext_resource type="Texture2D" uid="uid://y680mmioqn1e" path="res://gui/lives.png" id="4_rdwp2"]
[ext_resource type="Texture2D" uid="uid://bxgnmliqvatr2" path="res://gui/heart.png" id="5_3cvos"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r2gjq"]
atlas = ExtResource("5_3cvos")
region = Rect2(0, 0, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tdiv"]
atlas = ExtResource("5_3cvos")
region = Rect2(24, 0, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtd6y"]
atlas = ExtResource("5_3cvos")
region = Rect2(48, 0, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_knxh7"]
atlas = ExtResource("5_3cvos")
region = Rect2(72, 0, 24, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_pned6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2gjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tdiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtd6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knxh7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xl70e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.35
anchor_bottom = 0.7
offset_top = -44.0
offset_right = 24.0
offset_bottom = 44.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ScoreSprite" type="Sprite2D" parent="VBoxContainer/MarginContainer"]
texture = ExtResource("1_bd8dt")
centered = false

[node name="ScoreLabel" type="Label" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_0d3iy")
text = "0"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TimeSprite" type="Sprite2D" parent="VBoxContainer/MarginContainer2"]
texture = ExtResource("3_gso6j")
centered = false

[node name="TimeLabel" type="Label" parent="VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_0d3iy")
text = "0"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="LivesSprite" type="Sprite2D" parent="VBoxContainer/MarginContainer3"]
texture = ExtResource("4_rdwp2")
centered = false

[node name="HeartsContainer" type="Node2D" parent="VBoxContainer/MarginContainer3"]
position = Vector2(0, 14)

[node name="Heart" type="AnimatedSprite2D" parent="VBoxContainer/MarginContainer3/HeartsContainer"]
sprite_frames = SubResource("SpriteFrames_pned6")
frame_progress = 0.506517
speed_scale = 0.0
centered = false
